--- a/css/style.css
+++ b/css/style.css
@@ -209,3 +209,20 @@ body {
 #pink {
   color: #ff0096;
 }
+  footer {
+    height: 175px;
+    background-color: #2C3E50;
+    color: #E9D460;
+    text-align: center;
+  }
+  #thank_you{
+    padding-top: 50px;
+  }
+  .icons{
+    margin:  0 auto;
+    padding-top: 30px;
+  }
+  .icons img{
+    padding-right:15px;
+    padding-left: 15px;
+  }
