--- a/css/style.css
+++ b/css/style.css
@@ -76,7 +76,7 @@ body {
   height: 230px;
   position: relative;
   cursor: pointer;
-  background-color: #5BBCC9;
+  background-color: #8cd0d9;
   color: white;
   font-size: 1.5em;
   text-align: center;
