--- a/css/work.css
+++ b/css/work.css
@@ -20,21 +20,20 @@ html * {
 }
 .navbar-default .navbar-nav>li>a {
 color: #2C3E50;
-font-size: 125%;
 font-family: Menlo, Monaco, "Consolas", "Courier New", "Courier";
+font-size: 125%;
 }
 
 body {
-  font-size: 100%;
   font-family: Menlo, Monaco, "Consolas", "Courier New", "Courier";
   color: #30353A;
   background-color:white;
+  font-size: 14px;
 }
 
 a {
   color: #acb7c0;
   text-decoration: none;
-  font-family: "Open Sans", sans-serif;
 }
 
 img {
@@ -42,7 +41,6 @@ img {
 }
 
 h1, h2 {
-  font-family: Lato;
   font-weight: bold;
 }
 
@@ -79,7 +77,7 @@ header h1 {
   line-height: 1.1;
   font-family: Menlo, Monaco, "Consolas", "Courier New", "Courier";
   color: #30353A;
-  padding-top: 50px;
+  padding-top: 80px;
 }
 @media only screen and (min-width: 1170px) {
   header {
@@ -268,7 +266,6 @@ header h1 {
 }
 .cd-timeline-content h2 {
   color: #5bbcc9;
-  font-family: Lato;
   font-weight: bold;
 }
 .cd-timeline-content p, .cd-timeline-content .cd-read-more, .cd-timeline-content .cd-date {
@@ -306,7 +303,7 @@ header h1 {
   height: 0;
   width: 0;
   border: 7px solid transparent;
-  border-right: 7px solid white;
+  border-right: 9px solid #E0E8F0;
 }
 @media only screen and (min-width: 768px) {
   .cd-timeline-content h2 {
@@ -341,13 +338,14 @@ header h1 {
   .cd-timeline-block:nth-child() .cd-timeline-content {
    /* float: right;*/
     float: right;
+    border-right-color: red;
   }
   .cd-timeline-block:nth-child() .cd-timeline-content::before {
     top: 24px;
     /*left: auto;
     right: 100%;*/
     border-color: transparent;
-    border-right-color: white;
+    border-right-color: red;
   }
   .cd-timeline-block:nth-child(even) .cd-timeline-content .cd-read-more {
     float: right;
@@ -526,3 +524,8 @@ footer {
 .button.red {
   background: #E75448;
 }
+#position{
+  padding-top: 10px;
+  font-weight: 800;
+}
+
